--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -114,8 +114,7 @@ body {
 }
 
 .container-hero {
-    max-width: 1440px;
-    margin: 0 auto;
+    padding: 0;
 }
 
 .hero-inner{
@@ -193,19 +192,14 @@ body {
 
 
 .skills-items {
-    display: flex;
-    align-items: baseline;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     text-align: center;
-    flex-wrap: wrap;
 }
 
 .skills-item {
     max-width: 320px;
     width: 100%;
-}
-
-.skills-item + .skills-item {
-    margin-left: 40px;
 }
 
 .skills-img {
@@ -220,6 +214,7 @@ body {
 .skills-descr {
     font-size: 18px;
     line-height: 36px;
+    letter-spacing: 1.1px;
     margin-bottom: 10px;
 }
 
@@ -560,7 +555,7 @@ body {
 
 @media (max-width: 768px) {
     .header-top{
-        padding: 20px 60px 20px 60px;
+        padding: 20px 45px 20px 40px;
     }
     .menu-btn{
         display: block;
@@ -619,7 +614,7 @@ body {
         padding: 134px 0 463px 127px;
         max-width: 620px;
         text-align: left;
-        transform: translateY(-200%);
+        transform: translateX(-200%);
         transition: all .5s;
     }
     .menu-list__active{
@@ -635,21 +630,27 @@ body {
     .menu-item__lang{
         margin-left: 0;
     }
+    .hero-inner {
+        background-position: 0px;
+    }
     .hero-content {
         max-height: 590px;
+        padding: 0 0 0 60px;
     }
     .hero-title{
-        padding-top: 100px;
-        font-size: 50px;
-        line-height: 90px;
+        padding-top: 180px;
+        font-size: 32px;
+        line-height: 64px;
     }
     .hero-text {
-        font-size: 18px;
+        max-width: 390px;
+        line-height: 24px;
+        margin: 20px 0px 60px 0;
     }
     .skills,
     .video,
     .price {
-        padding-top: 50px;
+        padding-top: 80px;
     }
     .skills-items {
         padding: 0 30px;
