--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,8 @@ body {
 
 .container {
     max-width: 1440px;
-    padding: 0 20px;
     margin: 0 auto;
+    padding: 0 20px;
 }
 
 .header {
@@ -113,6 +113,10 @@ body {
     position: relative;
 }
 
+.container-hero {
+    padding: 0;
+}
+
 .hero-inner{
     background-image: url(../images/header-bg.jpg);
     background-position: center top;
@@ -135,7 +139,7 @@ body {
 
 .hero-text {
     max-width: 470px;
-    margin:0 20px 35px 0;
+    margin: 12px 20px 35px 0;
     color: #fff;
 }
 
@@ -188,16 +192,13 @@ body {
 
 
 .skills-items {
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     text-align: center;
-    flex-wrap: wrap;
 }
 
-
 .skills-item {
-    max-width: 280px;
+    max-width: 320px;
     width: 100%;
 }
 
@@ -213,6 +214,7 @@ body {
 .skills-descr {
     font-size: 18px;
     line-height: 36px;
+    letter-spacing: 1.1px;
     margin-bottom: 10px;
 }
 
@@ -238,7 +240,7 @@ body {
     margin-bottom: 60px;
 }
 .portfolio-filter__item + .portfolio-filter__item{
-    margin-left: 10px;
+    margin-left: 5px;
 }
 .portfolio-btn {
     border: 2px solid #BDAE82;
@@ -246,7 +248,8 @@ body {
     background-color: inherit;
     font-size: 20px;
     line-height: 40px;
-    padding: 8px 70px;
+    width: 220px;
+    height: 55px;
     cursor: pointer;
     transition: all .5s;
     cursor: pointer;
@@ -348,7 +351,7 @@ body {
     text-align: center;
     background-color: #BDAE82;
     color: #000000;
-    padding: 8px 39px;
+    padding: 6px 43px;
     margin: 40px 0 43px 0;
     transition: all .5s;
     cursor: pointer;
@@ -385,7 +388,7 @@ body {
 .contacts-info__input {
     display: block;
     width: 100%;
-    padding: 5px 20px 5px 20px;
+    padding: 5px 20px 1px 20px;
     font-size: 20px;
     line-height: 40px;
     color: #BDAE82;
@@ -397,7 +400,7 @@ body {
 .contacts-info__textarea {
     display: block;
     width: 100%;
-    padding: 5px 20px 5px 20px;
+    padding: 5px 20px 11px 20px;
     font-size: 20px;
     line-height: 40px;
     color: #BDAE82;
@@ -421,7 +424,7 @@ body {
     text-align: center;
     background-color: #BDAE82;
     color: #000000;
-    padding: 8px 39px;
+    padding: 8px 44px;
     transition: all .5s;
     cursor: pointer;
 }
@@ -484,4 +487,367 @@ body {
 
 .footer-social__img path:hover {
     fill: #BDAE82;
+}
+
+@media (max-width: 1440px) {
+    .portfolio-list {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    column-gap: 0px;
+    text-align: center;
+    }
+}
+
+@media (max-width: 1200px) {
+    .skills-items {
+        padding: 0 40px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-gap: 54px 36px;
+        place-items: center;
+    }
+    .skills-item {
+        max-width: 300px;
+    }
+    .skills-img {
+        margin-bottom: 30px;
+
+    }
+}
+
+@media (max-width: 979px) {
+    .portfolio-filter__btn{
+        max-width: 450px;
+        margin: 0 auto;
+    }
+    .portfolio-filter__item + .portfolio-filter__item{
+        margin-left: 0;
+    }
+    .portfolio-filter__item:nth-child(even) {
+        margin-left: 5px;
+    }
+    .portfolio-filter__item:first-child,
+    .portfolio-filter__item:nth-child(2) {
+        margin-bottom: 5px;
+    }
+    .portfolio-btn {
+        width: 220px;
+    }
+    .portfolio-list {
+        margin-top: 60px;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(1, 1fr);
+        column-gap: 25px;
+    }
+}
+
+@media (max-width: 955px) {
+    .price-items {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .price
+    .price-list + .price-list {
+        margin-left: 0;
+        margin-top: 50px;
+    }
+}
+
+@media (max-width: 768px) {
+    /* .body-lock{
+        overflow: hidden;
+    } */
+    .header-top{
+        padding: 20px 45px 20px 40px;
+    }
+    .menu-btn{
+        display: block;
+        width: 50px;
+        height: 28px;
+        border: none;
+        background-color: transparent;
+        color: #fff;
+        position: relative;
+        cursor: pointer;
+        padding: 0;
+        order: 1;
+        margin-left: 20px;
+        z-index: 3; 
+    }
+    .menu-btn span {
+        display: block;
+        height: 3px;
+        width: 100%;
+        background-color: #fff;
+        transition: all .5s;
+    }
+    .menu-btn::after,
+    .menu-btn::before {
+        position: absolute;
+        content: '';
+        width: 100%;
+        background-color: #fff;
+        height: 3px;
+        left: 0;
+        right: 0;
+        transition: all .5s;
+    }
+    .menu-btn::after {
+        bottom: 0;
+    }
+    .menu-btn::before {
+        top: 0;
+    }
+    .menu-btn__active span {
+        opacity: 0;
+    }
+    .body-active {
+        opacity: 0.5;
+        transition: opacity .5s;
+    }
+    .menu-btn__active::before {
+        transform: rotate(-45deg) translate(-9px, 6px) ;
+    }
+    .menu-btn__active::after {
+        transform: rotate(45deg) translate(-10px, -10px) ;
+    }
+    .menu-list {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 145px;
+        right: 0;
+        background: #000000;
+        padding: 134px 0 463px 127px;
+        max-width: 620px;
+        text-align: left;
+        transform: translateX(-200%);
+        transition: all .5s;
+        opacity: 1;
+    }
+    .menu-list__active{
+        transform: translateX(0);
+    }
+    .menu-item + .menu-item {
+        margin-left: 0;
+    }
+    .menu-item__link {
+        font-size: 34.8235px;
+        line-height: 73px;
+    }
+    .menu-item__lang{
+        margin-left: 0;
+    }
+    .hero-inner {
+        height: 590px;
+        background-image: url(../images/header-small-bg.jpg);
+    }
+    .hero-content {
+        max-height: 590px;
+        padding: 0 0 0 60px;
+    }
+    .hero-title{
+        padding-top: 180px;
+        font-size: 32px;
+        line-height: 64px;
+    }
+    .hero-text {
+        max-width: 390px;
+        line-height: 24px;
+        margin: 20px 0px 60px 0;
+    }
+    .skills,
+    .video,
+    .price {
+        padding-top: 80px;
+    }
+    .skills-items {
+        padding: 0 30px;
+        grid-gap: 36px 44px;
+        place-items: center;
+    }
+    .skills-descr {
+        line-height: 22px;
+        letter-spacing: 0;
+    }
+    .title {
+        max-width: 364px;
+        font-size: 32px;
+        margin-bottom: 55px;
+    }
+    .title::after,
+    .title::before {
+        width: 117px;
+    }
+    .portfolio {
+        padding-top: 50px;
+    }
+    .portfolio-title::before,
+    .portfolio-title::after {
+        width: 90px;
+    }
+    .video-popup__inner {
+        height: 418px;
+    }
+    .price-list {
+        max-width: 420px;
+    }
+    .price-item__btn {
+        margin: 40px 0 40px 0;
+    }
+    .contacts-inner {
+        height: 600px;
+        background-image: url(../images/contacts-small-bg.jpg);
+        background-position: 0;
+        justify-content: center;
+    }
+    .contacts-form {
+        margin: 60px 0px 0 0px;
+        text-align: center;
+    }
+    .contacts-title {
+        font-size: 32px;
+        line-height: 64px;
+    }
+    .contacts-info__input,
+    .contacts-info__textarea {
+        background-color: rgba(0, 0, 0, 0.5);
+    }
+    .contacts-info__btn {
+        border: none;
+        font-size: 20px;
+        line-height: 40px;
+        text-align: center;
+        background-color: #BDAE82;
+        color: #000000;
+        padding: 8px 44px;
+        transition: all .5s;
+        cursor: pointer;
+    }
+
+    .footer {
+        padding: 20px 20px;
+    }
+    .footer-content {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        place-items: center;
+    }
+}
+
+@media (max-width: 620px) {
+    .menu-list {
+        left: 0;
+    }
+    .hero-inner {
+        background-position: right;
+    }
+    .skills-items {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(1, 1fr);
+        grid-gap: 30px;
+    }
+    .price-item__title {
+        font-size: 25px;
+        line-height: 46px;
+        margin: 20px 0 20px 0;
+    }
+    .price-item__price {
+        font-size: 20px;
+        line-height: 40px;
+        margin-bottom: 20px;
+    } 
+    .price-item__btn {
+        margin: 20px 0 20px 0;
+    }
+    
+}
+
+@media (max-width: 515px) {
+    .portfolio-filter__item:nth-child(even) {
+        margin-left: 0px;
+    }
+    .portfolio-filter__item:nth-child(n){
+        margin-bottom: 5px;
+    }
+    .portfolio-list {
+        place-items: center;
+    }
+    .portfolio-item__img {
+        width: 100%;
+    }
+    .contacts-inner{
+        height: 550px;
+    }
+    .contacts-title {
+        font-size: 30px;
+        line-height: 60px;
+        margin-bottom: 20px;
+    }
+    .contacts-info__input {
+        font-size: 16px;
+        line-height: 32px;
+    }
+    
+    .contacts-info__textarea {
+        font-size: 16px;
+        line-height: 32px;
+    }
+    
+    .contacts-info__input::placeholder,
+    .contacts-info__textarea::placeholder {
+        font-size: 16px;
+        line-height: 32px;
+    }
+    .contacts-form {
+        margin: 40px 20px 0 20px;
+    }
+}
+
+@media (max-width: 480px) {
+    .header-top {
+        padding: 20px;
+    }
+    .menu-list {
+        left: 0;
+        padding:  75px 0 115px 20px;
+        opacity: 0.9;
+    }
+    .menu-item__link {
+        font-size: 26px;
+        line-height: 48px;
+    }
+    .hero-content {
+        padding-left: 20px;
+    }
+    .hero-title{
+        padding-top: 120px;
+        font-size: 30px;
+        line-height: 58px;
+    }
+    .hero-text {
+        font-size: 16px;
+        line-height: 18px;
+    }
+    .title {
+        max-width: 300px;
+        font-size: 32px;
+        margin-bottom: 30px;
+    }
+    .title::after,
+    .title::before {
+        width: 70px;
+    }
+    .skills-items {
+        grid-gap: 30px;
+    }
+    .skills-img {
+        margin-bottom: 15px;
+    }
+    .portfolio-title::before,
+    .portfolio-title::after {
+    width: 50px;
+    }
 }
