--- a/css/style.css
+++ b/css/style.css
@@ -511,7 +511,7 @@ body {
         max-width: 300px;
     }
     .skills-img {
-        margin-bottom: 30px;
+        margin-bottom: 16px;
 
     }
 }
@@ -559,7 +559,7 @@ body {
         overflow: hidden;
     } */
     .header-top{
-        padding: 20px 45px 20px 40px;
+        padding: 20px 25px 20px 40px;
     }
     .menu-btn{
         display: block;
@@ -648,7 +648,7 @@ body {
         padding: 0 0 0 60px;
     }
     .hero-title{
-        padding-top: 180px;
+        padding-top: 170px;
         font-size: 32px;
         line-height: 64px;
     }
@@ -658,13 +658,15 @@ body {
         margin: 20px 0px 60px 0;
     }
     .skills,
-    .video,
     .price {
         padding-top: 80px;
     }
+    .skills-title {
+        margin-bottom: 46px;
+    }
     .skills-items {
         padding: 0 30px;
-        grid-gap: 36px 44px;
+        grid-gap: 66px 38px;
         place-items: center;
     }
     .skills-descr {
@@ -681,14 +683,33 @@ body {
         width: 117px;
     }
     .portfolio {
-        padding-top: 50px;
+        padding-top: 150px;
+    }
+    .portfolio-title {
+        margin-bottom: 48px;
     }
     .portfolio-title::before,
     .portfolio-title::after {
         width: 90px;
     }
+    .portfolio-item .portfolio-item {
+        margin-top: 15px;
+    }
+    .video {
+        padding-top: 75px;
+    }
+    .video-popup {
+        background-image: url(../images/video-small-bg.jpg);
+    }
+    .video-popup__img {
+        width: 75px;
+        height: 75px;
+    }
     .video-popup__inner {
         height: 418px;
+    }
+    .price {
+        padding-bottom: 80px;
     }
     .price-list {
         max-width: 420px;
@@ -725,9 +746,8 @@ body {
         transition: all .5s;
         cursor: pointer;
     }
-
     .footer {
-        padding: 20px 20px;
+        padding: 15px 20px;
     }
     .footer-content {
         display: grid;
