--- a/css/style.css
+++ b/css/style.css
@@ -535,7 +535,7 @@ body {
         width: 220px;
     }
     .portfolio-list {
-        margin-top: 60px;
+        margin-top: 65px;
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(1, 1fr);
         column-gap: 25px;
@@ -547,7 +547,6 @@ body {
         flex-wrap: wrap;
         justify-content: center;
     }
-    .price
     .price-list + .price-list {
         margin-left: 0;
         margin-top: 50px;
@@ -560,6 +559,15 @@ body {
     } */
     .header-top{
         padding: 20px 25px 20px 40px;
+    }
+    .title {
+        max-width: 364px;
+        font-size: 32px;
+        margin-bottom: 55px;
+    }
+    .title::after,
+    .title::before {
+        width: 117px;
     }
     .menu-btn{
         display: block;
@@ -657,8 +665,7 @@ body {
         line-height: 24px;
         margin: 20px 0px 60px 0;
     }
-    .skills,
-    .price {
+    .skills {
         padding-top: 80px;
     }
     .skills-title {
@@ -673,15 +680,7 @@ body {
         line-height: 22px;
         letter-spacing: 0;
     }
-    .title {
-        max-width: 364px;
-        font-size: 32px;
-        margin-bottom: 55px;
-    }
-    .title::after,
-    .title::before {
-        width: 117px;
-    }
+    
     .portfolio {
         padding-top: 150px;
     }
@@ -692,8 +691,8 @@ body {
     .portfolio-title::after {
         width: 90px;
     }
-    .portfolio-item .portfolio-item {
-        margin-top: 15px;
+    .portfolio-item + .portfolio-item {
+        margin-top: 50px;
     }
     .video {
         padding-top: 75px;
@@ -709,6 +708,7 @@ body {
         height: 418px;
     }
     .price {
+        padding-top: 100px;
         padding-bottom: 80px;
     }
     .price-list {
