--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -118,6 +118,10 @@ body {
     color: #fff;
 }
 
+.menu-btn__lang.active {
+    color: #bdae82;
+}
+
 .menu-item__link:hover,
 .menu-btn__lang:hover {
     color: #BDAE82;
@@ -180,7 +184,7 @@ body {
     color: #fff;
 }
 
-.hero-btn {
+/* .hero-btn {
     color: #000;
     padding: 15px 72px;
     background-color: #BDAE82;
@@ -188,7 +192,58 @@ body {
     transition: all .8s ease 0s;
     cursor: pointer;
     position: relative;
-}
+} */
+
+.btn {
+    position: relative;
+    display: inline-block;
+    width: 200px;
+    height: 60px;
+    text-align: center;
+    line-height: 58px;
+    color: #fff;
+    font-size: 20px;
+    text-decoration: none;
+    font-family: sans-serif;
+    box-sizing: border-box;
+    background: linear-gradient(90deg, #bdae82, #bdaf54, #bdae01, #bdaa99);
+    background-size: 400%;
+    z-index: 1;
+    border-radius: 5px;
+  }
+   
+  .btn:hover {
+    animation: animate 5s linear infinite;
+  }
+   
+  @keyframes animate {
+    0% {
+      background-position: 0%;
+    }
+    100% {
+      background-position: 400%;
+    }
+  }
+   
+  .btn:before {
+    content: "";
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    bottom: -5px;
+    left: -5px;
+    z-index: -1;
+    background: linear-gradient(90deg, #bdae82, #bdaf54, #bdae01, #bdaa99);
+    background-size: 400%;
+    opacity: 0;
+    transition: .5s;
+  }
+   
+  .btn:hover:before {
+    filter: blur(20px);
+    opacity: 1;
+    animation: animate 5s linear infinite;
+  }
 
 .skills {
     padding-top: 100px;
@@ -217,11 +272,11 @@ body {
 }
 
 .title::after {
-    right: 0;
+    right: -20px;
 }
 
 .title::before {
-    left: 0;
+    left: -20px;
 }
 
 
@@ -278,16 +333,23 @@ body {
 .portfolio-filter__item + .portfolio-filter__item{
     margin-left: 5px;
 }
+
 .portfolio-btn {
-    border: 2px solid #BDAE82;
-    color: var(--title);
-    background-color: inherit;
+    position: relative;
+    width: 200px;
+    height: 60px;
+    text-align: center;
+    line-height: 58px;
+    color: var(--text);
     font-size: 20px;
-    line-height: 40px;
-    width: 220px;
-    height: 55px;
-    cursor: pointer;
-    transition: all .5s;
+    text-decoration: none;
+    font-family: sans-serif;
+    box-sizing: border-box;
+    background: linear-gradient(90deg, #bdae82, #bdaf54, #bdae01, #bdaa99);
+    background-size: 400%;
+    z-index: 1;
+    border-radius: 5px;
+    border: none;
     cursor: pointer;
 }
 
@@ -385,13 +447,8 @@ body {
 .price-item__btn {
     border: none;
     font-size: 20px;
-    line-height: 40px;
-    text-align: center;
-    background-color: #BDAE82;
     color: #000000;
-    padding: 6px 43px;
     margin: 40px 0 43px 0;
-    transition: all .5s;
     cursor: pointer;
 }
 
@@ -461,14 +518,13 @@ body {
     line-height: 40px;
     text-align: center;
     background-color: #BDAE82;
-    color: #000000;
-    padding: 8px 44px;
+    color: var(--text);
     transition: all .5s;
     cursor: pointer;
 }
 
 .contacts-info__btn:hover {
-    color: #fff;
+    color: var(--main-bg);
 }
 
 .footer {
@@ -614,7 +670,7 @@ body {
         height: 28px;
         border: none;
         background-color: transparent;
-        color: #fff;
+        color: var(--text);
         position: relative;
         cursor: pointer;
         padding: 0;
@@ -654,9 +710,11 @@ body {
         transition: opacity .5s;
     }
     .menu-btn__active::before {
+        background-color: var(--text);
         transform: rotate(-45deg) translate(-9px, 6px) ;
     }
     .menu-btn__active::after {
+        background-color: var(--text);
         transform: rotate(45deg) translate(-10px, -10px) ;
     }
     .menu-list {
@@ -665,7 +723,8 @@ body {
         top: 0;
         left: 145px;
         right: 0;
-        background: #000000;
+        background: var(--main-bg);
+        color: var(--text);
         padding: 134px 0 463px 127px;
         max-width: 620px;
         text-align: left;
@@ -682,6 +741,7 @@ body {
     .menu-item__link {
         font-size: 34.8235px;
         line-height: 73px;
+        color: var(--text);
     }
     .menu-item__lang{
         margin-left: 0;
@@ -731,7 +791,7 @@ body {
         width: 90px;
     }
     .portfolio-item + .portfolio-item {
-        margin-top: 50px;
+        margin-top: 20px;
     }
     .video {
         padding-top: 75px;
